--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,7 @@ data/nyu-2451-34758-shapefile/wfsrequest.txt
 data/Ridership and Transfers by Day and Station.xlsx
 
 # Other Directories
+other/
 
 # Other
 .DS_Store
